# dupefinder

./: .gitignore  Cargo.toml  readme.md
resources/dupes_with_empty/: a.txt
resources/folders/: test.txt
src/: lib.rs
src/dirdata/: mod.rs
src/duplicate/: mod.rs
src/findfile/: mod.rs
src/hashable/: mod.rs
