[package]
name = "dupefinder"
version = "0.1.1"
edition = "2021"
description="A duplicate file finding utility library that supports directory recursion, multiple directories, and specific file duplicate searching."
repository = "https://github.com/vgo0/dupefinder"
homepage = "https://github.com/vgo0/dupefinder"
license = "MIT"
keywords = ["dupe", "dupes", "duplicate-files", "dupe-file-finder", "duplicates"]

[dependencies]
log = "0.4.20"
sha2 = "0.10.8"
