[package]
name = "dupefinder"
version = "0.2.0"
edition = "2021"
description="A duplicate file finding utility library that supports directory recursion, multiple directories, and specific file duplicate searching."
repository = "https://github.com/vgo0/dupefinder"
homepage = "https://github.com/vgo0/dupefinder"
license = "MIT"
keywords = ["dupe", "dupes", "duplicate-files", "dupe-file-finder", "duplicates"]

[dependencies]
log = "0.4.20"

[dependencies.xxhash-rust]
version = "0.8.8"
features = ["xxh3"]
